# resume-parser

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: delete_user.py  flush_es_db.py  resume_parser.py  search.py
app/core/: config.py
